manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: us-central1-docker.pkg.dev/project-3221e5c6-5e0a-4aef-af3/demo-repo/nginx-app:latest
          ports:
            - containerPort: 80
