manifests/api-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: nginx:latest
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo '<h1>API BACKEND</h1><p>Request reached api-service through HTTPRoute.</p>' > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
