manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: nginx-gateway
  hostnames:
    - harshac.online
    - www.harshac.online
  rules:
    - backendRefs:
        - name: nginx-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
    - name: nginx-gateway
  hostnames:
    - api.harshac.online
  rules:
    - backendRefs:
        - name: api-service
          port: 80
